<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/login_bg" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <ImageView
            android:layout_width="80dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:scaleType="centerInside"
            android:src="@drawable/books"
            android:tint="@color/colorPrimary" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="-24dp"
            android:fontFamily="@font/logo_font"
            android:text="@string/app_name"
            android:textAllCaps="true"
            android:textColor="@color/offOrange"
            android:textSize="20sp" />

        <View
            android:layout_width="60dp"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:layout_margin="4dp"
            android:background="@color/white" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/overlock"
                android:text="@string/slogan"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:fontFamily="@font/overlock"
                android:text="@string/slogan_author"
                android:textColor="@color/offWhite"
                android:textSize="12sp" />
        </LinearLayout>


        <lib.kingja.switchbutton.SwitchMultiButton
            android:id="@+id/switch_tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:padding="8dp"
            app:selectedTab="0"
            app:strokeRadius="5dp"
            app:switchTabs="@array/tabs_array"
            app:textSize="16sp"
            app:typeface="gotham.otf" />

        <FrameLayout
            android:id="@+id/fragment_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="60dp"
        android:visibility="gone" />
</FrameLayout>
